Updated skills with NodeJs resume

--- a/index-bkp101125.html
+++ b/index-bkp101125.html
@@ -3,49 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>
-      Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)
+      Yogesh Nayi — Principal Consultant — PHP, MySQL & Cloud-Enabled Web
+      Solutions
     </title>
-
     <meta
       name="description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
+      content="Resume of Yogesh Nayi, Principal Consultant with 13+ years in PHP, MySQL, and web platforms."
     />
-    <link rel="canonical" href="https://yogesh0720.github.io/" />
-    <meta name="robots" content="index,follow" />
-
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)"
-    />
-    <meta
-      property="og:description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
-    />
-    <meta property="og:url" content="https://yogesh0720.github.io/" />
-    <meta
-      property="og:image"
-      content="https://yogesh0720.github.io/ysnayi-photo.png"
-    />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)"
-    />
-    <meta
-      name="twitter:description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
-    />
-    <meta
-      name="twitter:image"
-      content="https://yogesh0720.github.io/ysnayi-photo.png"
-    />
-
     <style>
       /* ---------- Base & Print ---------- */
       :root {
@@ -135,21 +100,6 @@
         display: flex;
         align-items: center;
         gap: 6px;
-      }
-
-      .header-cta {
-        margin-top: 12px;
-      }
-      .btn {
-        display: inline-block;
-        border: 1px solid #e5e7eb;
-        background: #fff;
-        border-radius: 10px;
-        padding: 8px 12px;
-        text-decoration: none;
-      }
-      .btn:active {
-        transform: translateY(1px);
       }
 
       main {
@@ -256,7 +206,7 @@
         header,
         main,
         footer {
-          padding: 0;
+          padding: 0 0 0 0;
         }
         header {
           padding-bottom: 8px;
@@ -271,8 +221,7 @@
         .avatar {
           display: none;
         }
-        .actions,
-        .header-cta {
+        .actions {
           display: none;
         }
       }
@@ -281,6 +230,7 @@
   <body>
     <div class="page" id="page">
       <header>
+        <!-- <div class="avatar" aria-hidden="true">YN</div> -->
         <div class="avatar-wrapper" id="avatar-wrapper">
           <img
             src="ysnayi-photo.png"
@@ -291,12 +241,10 @@
         <div class="title">
           <h1>Yogesh Nayi</h1>
           <h2>
-            Principal Consultant - Backend & Platform Engineering (Node.js, PHP,
-            AWS)
+            Principal Consultant — PHP, MySQL & Cloud-Enabled Web Solutions
           </h2>
-
           <div class="meta">
-            <span>📍 Ahmedabad, India (IST)</span>
+            <span>📍 India (IST)</span>
             <span
               >✉︎
               <a href="mailto:yogeshnayi@ymail.com"
@@ -306,13 +254,13 @@
             <span>☎︎ +91-95105 50720</span>
             <span
               >🔗
-              <a href="https://www.linkedin.com/in/yogeshnayi" rel="noopener"
+              <a href="https://www.linkedin.com/in/yogeshnayi"
                 >linkedin.com/in/yogeshnayi</a
               ></span
             >
             <span
               >🌐
-              <a href="https://github.com/yogesh0720" rel="noopener"
+              <a href="https://github.com/yogesh0720"
                 >github.com/yogesh0720</a
               ></span
             >
@@ -326,12 +274,12 @@
           <h3>Summary</h3>
           <div class="card">
             <p>
-              Principal Consultant with 13+ years of experience building and
-              scaling backend and platform systems across Node.js, PHP, and AWS.
-              Strong focus on REST APIs, microservices, event-driven
-              architecture, and cloud-native design. Proven track record leading
-              teams, improving system reliability, and delivering secure,
-              high-availability solutions in enterprise environments.
+              Principal Consultant with 13+ years of experience architecting
+              PHP/MySQL platforms, REST APIs, and cloud-enabled dashboards.
+              Proven track record in delivering secure, scalable, and
+              high-availability solutions. Skilled across backend (CodeIgniter,
+              Symfony, Laravel), frontend (JS/TS), and DevOps (Docker, CI/CD),
+              with growing expertise in AWS and cybersecurity.
             </p>
           </div>
 
@@ -339,28 +287,31 @@
           <div class="item">
             <div class="top">
               <div>
-                <div class="role">Principal Consultant (Backend)</div>
+                <div class="role">Principal Consultant (PHP)</div>
                 <div class="org">Genpact • Full-time</div>
               </div>
-              <div class="date">Oct 2023 — Dec 2025</div>
+              <div class="date">Oct 2023 — Present</div>
             </div>
             <ul class="bullets">
               <li>
-                Architected and led development of backend APIs using PHP
-                (Symfony, Zend) and Node.js (Express, NestJS) on AWS, with focus
-                on scalability, authentication, and performance optimization.
+                Architected and maintained PHP (Symfony, Zend) and AWS-based
+                APIs.
               </li>
               <li>
-                Led a 3-engineer photo-services team; formalized code reviews,
-                improving release quality by 20%.
+                Led a 3-engineer photo-services team, handling planning,
+                development, delivery, formalized code reviews, improving
+                release quality by 20%.
+              </li>
+              <li>
+                Built secure REST APIs with authentication and third-party
+                integrations.
               </li>
               <li>
                 Partnered with frontend, QA, and product teams to deliver
-                features on time with zero regression.
+                features on time and with zero regression.
               </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -374,16 +325,13 @@
                 Led PHP and ReactJS app development for Resident Verify team.
               </li>
               <li>
-                Spearheaded Node.js-based RPR integration using Kafka and
-                PostgreSQL on AWS, enabling scalable, event-driven tenant
-                verification workflows.
+                Spearheaded RPR integration (Node.js, PostgreSQL, Kafka, AWS).
               </li>
               <li>
                 Conducted technical interviews and managed team interactions.
               </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -394,19 +342,19 @@
             </div>
             <ul class="bullets">
               <li>
-                Programmed PHP CodeIgniter, ReactJS, and Python-based
-                applications.
+                Programmed PHP CodeIgniter, ReactJS and Python-based
+                application.
               </li>
               <li>
                 Contributed to Architecture team and REST API Swagger
                 development.
               </li>
               <li>
-                Managed a team of 5; client communication; Agile delivery.
+                Managed a team of 5, engaged in client communication, and
+                followed Agile methodologies.
               </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -416,14 +364,13 @@
               <div class="date">Aug 2019 — Sep 2019</div>
             </div>
             <ul class="bullets">
-              <li>Crafted Laravel-based applications using PHP and MySQL.</li>
+              <li>Crafted Laravel-based application using PHP and MySQL.</li>
               <li>
-                Collaborated with project teams; focused on dedicated Laravel
+                Collaborated with project teams and focused on dedicated Laravel
                 development.
               </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -436,15 +383,18 @@
             </div>
             <ul class="bullets">
               <li>
-                Introduced CI/CD and automation using PHP, Python, and Django.
+                Introduced CI/CD support and automation programming in PHP,
+                Python, and Django.
               </li>
               <li>
                 Managed a team, conducted code reviews, and provided training.
               </li>
-              <li>Delivered custom development within Agile teams.</li>
+              <li>
+                Worked within Agile development teams and contributed to custom
+                development.
+              </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -461,12 +411,11 @@
                 websites.
               </li>
               <li>
-                Mentored junior coders; ensured site functionality; assisted
-                design with coding.
+                Managed junior coders and interns, ensured website
+                functionality, and assisted design with coding.
               </li>
             </ul>
           </div>
-
           <div class="item">
             <div class="top">
               <div>
@@ -477,18 +426,24 @@
             </div>
             <ul class="bullets">
               <li>
-                Developed APIs for mobile apps; gained proficiency in PHP, iOS,
-                and Android.
+                Developed APIs for mobile development, gained proficiency in
+                PHP, iOS, and Android.
               </li>
-              <li>Owned Web API development and functional specifications.</li>
+              <li>
+                Managed Web API development and functional specifications.
+              </li>
             </ul>
           </div>
 
           <h3>Selected Projects</h3>
           <div class="item">
+            <div class="top">
+              <div class="role"></div>
+              <div class="date"></div>
+            </div>
             <ul class="bullets">
               <li>
-                <strong>Shutterfly (Genpact)</strong> — Architected secure
+                <strong>ShutterFly (Genpact)</strong> — Architected secure
                 photo-service APIs, reducing downtime by 20%.
               </li>
               <li>
@@ -497,21 +452,23 @@
               </li>
               <li>
                 <strong>Achievers (ValueLabs)</strong> — Built scalable
-                PHP/MySQL modules for enterprise recognition, accelerating
-                delivery by 15%.
+                PHP/MySQL modules for the enterprise recognition platform,
+                accelerating feature delivery by 15%.
               </li>
               <li>
                 <strong>DASH Platforms (Analytix Business Solutions)</strong> —
-                Interactive dashboards in PHP/JS, reducing reporting time by
-                20%.
+                Developed interactive dashboards with PHP and JavaScript,
+                reducing reporting time by 20%.
               </li>
               <li>
-                <strong>MediaConnect360 (Milestone)</strong> — Engineered
-                content integrations, streamlining distribution for 50+ clients.
+                <strong>MediaConnect360 (Milestone Internet Marketing)</strong>
+                — Engineered content marketing integrations, streamlining
+                distribution for 50+ client accounts.
               </li>
               <li>
-                <strong>Mobile App API (Time IT Solutions)</strong> — RESTful
-                APIs and backend services, cutting response times by 30%.
+                <strong>Mobile App API (Time IT Solutions)</strong> — Designed
+                RESTful APIs and backend services, cutting response times by
+                30%.
               </li>
             </ul>
           </div>
@@ -521,19 +478,18 @@
         <section>
           <h3>Skills</h3>
           <div class="chips">
-            <span class="chip">Node.js, TypeScript, Express.js, NestJS</span>
-            <span class="chip">PHP 8.x (Laravel, Symfony, CodeIgniter)</span>
+            <span class="chip">PHP 8.x</span>
+            <span class="chip">JavaScript / Node.js / React.js</span>
             <span class="chip"
-              >REST APIs, Microservices, Event-Driven Architecture</span
+              >CodeIgniter / Symfony / Laravel / ExpressJS</span
             >
-            <span class="chip"
-              >MongoDB, PostgreSQL, MySQL, DynamoDB, Redis</span
-            >
-            <span class="chip">AWS (EC2, ECS, Lambda, S3, RDS)</span>
-            <span class="chip">Docker, CI/CD, GitHub, Splunk</span>
-            <span class="chip">React.js (API-driven UI)</span>
-            <span class="chip">Jira, Agile, HTML, CSS</span>
-            <span class="chip">Security (OWASP, Auth, API Hardening)</span>
+            <span class="chip">MySQL / MariaDB / PostgreSQL / NoSQL</span>
+            <span class="chip">REST API / Micro-Service / SOA</span>
+            <span class="chip">Jira / Agile / Splunk</span>
+            <span class="chip">HTML / CSS</span>
+            <span class="chip">Github / Docker / CI/CD</span>
+            <span class="chip">AWS (S3, EC2, ECS)</span>
+            <span class="chip">Security Basics (OWASP)</span>
           </div>
 
           <h3>Education</h3>
@@ -556,7 +512,9 @@
                 <strong>Cloud & Tech</strong> — AWS Cloud Practitioner, GCP
                 Essential Training, Apache Kafka, Blockchain
               </li>
-              <li><strong>Development</strong> — PHP, Node.js, React.js</li>
+              <li>
+                <strong>Development</strong> — PHP, Node.js, React.js, Python
+              </li>
               <li>
                 <strong>Emerging Tech</strong> — Agentic AI, Generative AI, Data
                 Science
@@ -569,31 +527,14 @@
             <ul class="bullets">
               <li>Improved API response time by 30%.</li>
               <li>
-                Reduced vulnerabilities by 40% via proactive security reviews.
+                Reduced vulnerabilities by 40% through proactive security
+                reviews.
               </li>
               <li>
-                Recognized in Employee Spotlight for a zero-downtime deployment
-                playbook adopted company-wide.
+                Recognized in Employee Spotlight for creating a zero-downtime
+                deployment playbook adopted company-wide.
               </li>
               <li>Mentored 10+ engineers, boosting team delivery speed.</li>
-            </ul>
-          </div>
-
-          <!-- ✅ New Community & Volunteering section -->
-          <h3>Community & Volunteering</h3>
-          <div class="card">
-            <ul class="bullets">
-              <li>
-                <strong>AWS Ahmedabad User Group</strong> — Active volunteer and
-                community contributor. Participated in AWS Community Day events
-                and cloud architecture workshops focusing on cost optimization,
-                serverless design, and DevOps automation.
-              </li>
-              <li>
-                <strong>Laravel Ahmedabad Community</strong> — Regular meetup
-                attendee exploring Laravel best practices, performance tuning,
-                and full-stack integrations with modern tools.
-              </li>
             </ul>
           </div>
 
@@ -609,72 +550,43 @@
       <footer>
         <div>Last updated: <span id="updated"></span></div>
         <div class="actions">
-          <button
-            onclick="window.print()"
-            title="Save/Print as PDF"
-            aria-label="Save or print this résumé as PDF"
-          >
+          <button onclick="window.print()" title="Save/Print as PDF">
             🖨️ Save as PDF
           </button>
         </div>
       </footer>
     </div>
 
-    <!-- Structured data (JSON-LD) -->
+    <!-- Optional: JSON-LD for better parsing on job portals that support it -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Yogesh Nayi",
         "jobTitle": "Principal Consultant",
-        "email": "mailto:yogeshnayi@ymail.com",
-        "telephone": "+91-9510550720",
-        "url": "https://yogesh0720.github.io/",
-        "image": "https://yogesh0720.github.io/ysnayi-photo.png",
-        "sameAs": [
-          "https://www.linkedin.com/in/yogeshnayi/",
-          "https://github.com/yogesh0720"
-        ],
-        "worksFor": { "@type": "Organization", "name": "Genpact" },
+        "email": "yogeshnayi@ymail.com",
+        "url": "https://github.com/yogesh0720",
+        "sameAs": ["https://www.linkedin.com/in/yogeshnayi/"],
         "knowsAbout": [
           "PHP",
-          "Laravel",
-          "Symfony",
           "CodeIgniter",
+          "Symfony",
+          "Laravel",
+          "ExpressJS",
+          "MySQL",
+          "APIs",
           "JavaScript",
           "Node.js",
-          "Express.js",
           "React.js",
-          "MySQL",
-          "PostgreSQL",
-          "NoSQL",
-          "REST APIs",
-          "Microservices",
-          "SOA",
           "Docker",
-          "CI/CD",
-          "AWS",
-          "S3",
-          "EC2",
-          "ECS",
-          "Lambda",
-          "RDS",
-          "DynamoDB",
-          "Kafka",
-          "Security",
-          "OWASP",
-          "TypeScript",
-          "MongoDB",
-          "Redis",
-          "Event-driven architecture",
-          "Backend engineering",
-          "Cloud-native systems"
-        ]
+          "AWS"
+        ],
+        "worksFor": { "@type": "Organization", "name": "Genpact" }
       }
     </script>
 
     <script>
-      // Update timestamp automatically (DD-MM-YYYY)
+      // Update timestamp automatically
       (function () {
         const el = document.getElementById("updated");
         const d = new Date();
