--- a/index-bkp13_01_2026.html
+++ b/index-bkp13_01_2026.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>
-      Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)
+      Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions
     </title>
 
     <meta
       name="description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
+      content="Principal Consultant specializing in PHP, Node.js, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
     />
     <link rel="canonical" href="https://yogesh0720.github.io/" />
     <meta name="robots" content="index,follow" />
@@ -19,11 +19,11 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions"
     />
     <meta
       property="og:description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
+      content="Principal Consultant specializing in PHP, Node.js, and AWS — delivering scalable, cloud-enabled web solutions with 13+ years of experience."
     />
     <meta property="og:url" content="https://yogesh0720.github.io/" />
     <meta
@@ -35,11 +35,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Principal Consultant - Backend & Platform Engineering (Node.js, PHP, AWS)"
+      content="Yogesh Nayi — Principal Consultant | PHP, Node.js, AWS Cloud Solutions"
     />
     <meta
       name="twitter:description"
-      content="Principal Consultant specializing in backend and platform engineering with Node.js, PHP, and AWS, delivering scalable, cloud-native systems with 13+ years of experience."
+      content="13+ years delivering secure, scalable, cloud-enabled platforms across PHP, Node.js & AWS."
     />
     <meta
       name="twitter:image"
@@ -291,8 +291,8 @@
         <div class="title">
           <h1>Yogesh Nayi</h1>
           <h2>
-            Principal Consultant - Backend & Platform Engineering (Node.js, PHP,
-            AWS)
+            Principal Consultant — PHP, Node.js &amp; AWS Cloud-Enabled Web
+            Solutions
           </h2>
 
           <div class="meta">
@@ -326,12 +326,12 @@
           <h3>Summary</h3>
           <div class="card">
             <p>
-              Principal Consultant with 13+ years of experience building and
-              scaling backend and platform systems across Node.js, PHP, and AWS.
-              Strong focus on REST APIs, microservices, event-driven
-              architecture, and cloud-native design. Proven track record leading
-              teams, improving system reliability, and delivering secure,
-              high-availability solutions in enterprise environments.
+              Principal Consultant with 13+ years architecting PHP/MySQL
+              platforms, REST APIs, and cloud-enabled dashboards. Proven track
+              record delivering secure, scalable, high-availability solutions.
+              Polyglot across backend (PHP: CodeIgniter, Symfony, Laravel;
+              Node.js: ExpressJS, NestJS), frontend (JS/TS), and DevOps (Docker,
+              CI/CD), with growing depth in AWS and application security.
             </p>
           </div>
 
@@ -339,20 +339,23 @@
           <div class="item">
             <div class="top">
               <div>
-                <div class="role">Principal Consultant (Backend)</div>
+                <div class="role">Principal Consultant (PHP)</div>
                 <div class="org">Genpact • Full-time</div>
               </div>
               <div class="date">Oct 2023 — Dec 2025</div>
             </div>
             <ul class="bullets">
               <li>
-                Architected and led development of backend APIs using PHP
-                (Symfony, Zend) and Node.js (Express, NestJS) on AWS, with focus
-                on scalability, authentication, and performance optimization.
+                Architected and maintained PHP (Symfony, Zend) and AWS-based
+                APIs.
               </li>
               <li>
                 Led a 3-engineer photo-services team; formalized code reviews,
                 improving release quality by 20%.
+              </li>
+              <li>
+                Built secure REST APIs with authentication and third-party
+                integrations.
               </li>
               <li>
                 Partnered with frontend, QA, and product teams to deliver
@@ -374,9 +377,7 @@
                 Led PHP and ReactJS app development for Resident Verify team.
               </li>
               <li>
-                Spearheaded Node.js-based RPR integration using Kafka and
-                PostgreSQL on AWS, enabling scalable, event-driven tenant
-                verification workflows.
+                Spearheaded RPR integration (Node.js, PostgreSQL, Kafka, AWS).
               </li>
               <li>
                 Conducted technical interviews and managed team interactions.
@@ -521,19 +522,18 @@
         <section>
           <h3>Skills</h3>
           <div class="chips">
-            <span class="chip">Node.js, TypeScript, Express.js, NestJS</span>
-            <span class="chip">PHP 8.x (Laravel, Symfony, CodeIgniter)</span>
+            <span class="chip">PHP 8.x</span>
+            <span class="chip">JavaScript, Node.js, React.js</span>
             <span class="chip"
-              >REST APIs, Microservices, Event-Driven Architecture</span
+              >CodeIgniter, Symfony, Laravel, ExpressJS, NestJS</span
             >
-            <span class="chip"
-              >MongoDB, PostgreSQL, MySQL, DynamoDB, Redis</span
-            >
-            <span class="chip">AWS (EC2, ECS, Lambda, S3, RDS)</span>
-            <span class="chip">Docker, CI/CD, GitHub, Splunk</span>
-            <span class="chip">React.js (API-driven UI)</span>
-            <span class="chip">Jira, Agile, HTML, CSS</span>
-            <span class="chip">Security (OWASP, Auth, API Hardening)</span>
+            <span class="chip">MySQL, MariaDB, PostgreSQL, NoSQL</span>
+            <span class="chip">REST APIs, Microservices, SOA</span>
+            <span class="chip">Jira, Agile, Splunk</span>
+            <span class="chip">HTML, CSS</span>
+            <span class="chip">GitHub, Docker, CI/CD</span>
+            <span class="chip">AWS (S3, EC2, ECS, Lambda, RDS, DynamoDB)</span>
+            <span class="chip">Security Basics (OWASP)</span>
           </div>
 
           <h3>Education</h3>
@@ -662,13 +662,7 @@
           "DynamoDB",
           "Kafka",
           "Security",
-          "OWASP",
-          "TypeScript",
-          "MongoDB",
-          "Redis",
-          "Event-driven architecture",
-          "Backend engineering",
-          "Cloud-native systems"
+          "OWASP"
         ]
       }
     </script>
