Updated frameworks name in org wise

--- a/index.html
+++ b/index.html
@@ -364,8 +364,9 @@
             </div>
             <ul class="bullets">
               <li>
-                Built event-driven Node.js (NestJS) microservices with Kafka and
-                PostgreSQL on AWS for scalable tenant verification workflows
+                Built event-driven Node.js (NestJS, TypeScript) microservices
+                with Kafka and PostgreSQL on AWS for scalable tenant
+                verification workflows
               </li>
               <li>
                 Led PHP/ReactJS development for Resident Verify platform serving
@@ -387,8 +388,8 @@
             </div>
             <ul class="bullets">
               <li>
-                Developed PHP (CodeIgniter), Node.js, and ReactJS applications
-                with REST API architecture
+                Developed PHP (Symfony, CodeIgniter), Node.js (ExpressJS), and
+                ReactJS (TypeScript) applications with REST API architecture
               </li>
               <li>
                 Contributed to Swagger API documentation and system architecture
@@ -412,7 +413,7 @@
             <ul class="bullets">
               <li>
                 Implemented CI/CD pipelines, unit testing, and DevOps automation
-                using PHP and Django
+                using PHP (Symfony, Laravel) and Python (Django)
               </li>
               <li>
                 Led team development, code reviews, and technical training
@@ -431,7 +432,8 @@
             </div>
             <ul class="bullets">
               <li>
-                Built responsive websites using PHP, MySQL, and JavaScript
+                Built responsive websites using PHP (CodeIgniter, Laravel),
+                MySQL, and JavaScript
               </li>
               <li>
                 Mentored junior developers and ensured code quality standards
